first try at toolbar

--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -111,3 +111,13 @@ ion-note {
 ion-item.selected {
   --color: var(--ion-color-primary);
 } 
+
+
+@media all and (min-width: 1165px){
+  .menuClass {
+    display: none;
+    color: brown;
+  }
+
+
+}
